initialize catalog with a search of likely database locations

--- a/plugin.xml
+++ b/plugin.xml
@@ -79,5 +79,9 @@
          <enablement></enablement>
       </actionTool>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup></startup>
+   </extension>
 
 </plugin>
